	PR gdb/15102: 	* dwarf2read.c (read_subrange_type): Use result of 	'check_typedef'. gdb/testsuite 	* gdb.dwarf2/subrange.exp: New file.